tests/snapshots/snapshot_tests__snapshot_run_metadata.snap
---
source: tests/snapshot_tests.rs
expression: m
---
{
  "run_id": "aaaaaaaa-bbbb-4ccc-8ddd-eeeeeeeeeeee",
  "work_order_id": "11111111-2222-4333-8444-555555555555",
  "contract_version": "abp/v0.1",
  "started_at": "2025-06-01T10:00:00Z",
  "finished_at": "2025-06-01T10:05:00Z",
  "duration_ms": 300000
}
