tests/snapshots/snapshot_tests__snapshot_runtime_config_default.snap
---
source: tests/snapshot_tests.rs
expression: "RuntimeConfig::default()"
---
{
  "model": null,
  "vendor": {},
  "env": {},
  "max_budget_usd": null,
  "max_turns": null
}
