tests/snapshots/snapshot_tests__snapshot_runtime_config_model_only.snap
---
source: tests/snapshot_tests.rs
expression: cfg
---
{
  "model": "gpt-4o",
  "vendor": {},
  "env": {},
  "max_budget_usd": null,
  "max_turns": null
}
