tests/snapshots/snapshot_tests__snapshot_support_level_restricted.snap
---
source: tests/snapshot_tests.rs
expression: "SupportLevel::Restricted { reason: \"requires opt-in\".into() }"
---
{
  "restricted": {
    "reason": "requires opt-in"
  }
}
