tests/snapshots/snapshot_tests__snapshot_verification_report_default.snap
---
source: tests/snapshot_tests.rs
expression: "VerificationReport::default()"
---
{
  "git_diff": null,
  "git_status": null,
  "harness_ok": false
}
