tests/snapshots/snapshot_tests__snapshot_work_order_builder_custom.snap
---
source: tests/snapshot_tests.rs
expression: wo
---
{
  "id": "[uuid]",
  "task": "custom task",
  "lane": "workspace_first",
  "workspace": {
    "root": "/home/user/project",
    "mode": "pass_through",
    "include": [],
    "exclude": []
  },
  "context": {
    "files": [],
    "snippets": []
  },
  "policy": {
    "allowed_tools": [],
    "disallowed_tools": [],
    "deny_read": [],
    "deny_write": [],
    "allow_network": [],
    "deny_network": [],
    "require_approval_for": []
  },
  "requirements": {
    "required": []
  },
  "config": {
    "model": "claude-3.5-sonnet",
    "vendor": {},
    "env": {},
    "max_budget_usd": 10.0,
    "max_turns": 50
  }
}
